--- a/Jsoup/app/src/main/res/layout/activity_record.xml
+++ b/Jsoup/app/src/main/res/layout/activity_record.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.administrator.myapplication.RecordActivity">
+    tools:context="com.example.administrator.Jsoupread.RecordActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
