--- a/Jsoup/app/src/main/res/layout/content_intro.xml
+++ b/Jsoup/app/src/main/res/layout/content_intro.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.administrator.myapplication.IntroActivity"
+    tools:context="com.example.administrator.Jsoupread.IntroActivity"
     tools:showIn="@layout/activity_intro">
     <TextView
         android:layout_width="match_parent"
