--- a/Jsoup/app/src/main/res/layout/content_record.xml
+++ b/Jsoup/app/src/main/res/layout/content_record.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.administrator.myapplication.RecordActivity"
+    tools:context="com.example.administrator.Jsoupread.RecordActivity"
     tools:showIn="@layout/activity_record">
     <ListView
         android:id="@+id/info_list_record"
